# algorist

./: .gitignore  README.md  _config.yml  algorist.blend  algorist.sh  dev-requirements.txt  dev-setup.sh  index.md  lint.sh  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: lint.yml  render.yml  resolution.py
algorist/: __init__.py  blender.py  cfdg.py  contextfree.py  core.py  decorator.py  mesh_factory.py  random.py  rules.py  transform.py
examples/: ballpit.py  glassball.blend  icecube.py  rules.py  sierpinksi.py  tree.py
