[project]
name = "algorist"
version = "0.0.1"

[tool.black]
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Type hints are incorrect in fake-bpy, so exclude
module = [
    "bpy",
    "mathutils",
]
follow_imports = "skip"

[tool.flake8]
# https://github.com/PyCQA/pycodestyle/issues/373
extend-ignore = "E203"
max-line-length = 88
